--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -41,6 +41,7 @@
     "immutable": "^3.8.2",
     "ioredis": "^3.1.1",
     "jsdom": "^11.6.2",
+    "jsonwebtoken": "^8.3.0",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
     "mongodb": "^2.2.34",
@@ -51,6 +52,7 @@
     "nodemailer": "^2.5.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^4.0.0",
     "raven": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
