Add JWT_SECRET to config and example.

--- a/config.env.example
+++ b/config.env.example
@@ -1,6 +1,9 @@
 # Hostname URL for the site, e.g. 'http://localhost:9876' for local dev
 CRN_SERVER_URL=
 
+# Secret authentication value for this instance
+JWT_SECRET=
+
 # Google oauth2 configuration - configure to enable Google auth
 # https://developers.google.com/identity/sign-in/web/sign-in for instructions
 GOOGLE_CLIENT_ID=
