change name of orcid auth variables

--- a/config.env.example
+++ b/config.env.example
@@ -9,6 +9,14 @@ JWT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Orcid oauth2 configuration - configure to enable Orcid auth
+ORCID_CLIENT_ID=
+ORCID_CLIENT_SECRET=
+ORCID_REDIRECT_URI=
+ORCID_URI=
+ORCID_API_ENDPOINT=
+
+
 # Relay for enabling mail - leave blank to disable email
 CRN_SERVER_MAIL_SERVICE=
 CRN_SERVER_MAIL_USER=
