remove unused orcid config; add sandbox config setting

--- a/config.env.example
+++ b/config.env.example
@@ -12,9 +12,8 @@ GOOGLE_CLIENT_SECRET=
 # Orcid oauth2 configuration - configure to enable Orcid auth
 ORCID_CLIENT_ID=
 ORCID_CLIENT_SECRET=
-ORCID_REDIRECT_URI=
-ORCID_URI=
 ORCID_API_ENDPOINT=
+ORCID_SANDBOX=
 
 
 # Relay for enabling mail - leave blank to disable email
