update config.env.example vars to include globus config

--- a/config.env.example
+++ b/config.env.example
@@ -14,6 +14,10 @@ ORCID_CLIENT_ID=
 ORCID_CLIENT_SECRET=
 ORCID_API_ENDPOINT=
 
+# Globus oauth2 configuration - configure to enable Globus auth
+GLOBUS_CLIENT_ID=
+GLOBUS_CLIENT_SECRET=
+
 
 # Relay for enabling mail - leave blank to disable email
 CRN_SERVER_MAIL_SERVICE=
