--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -44,6 +44,7 @@
     "react-dom": "16",
     "react-ga": "^2.2.0",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^3.3.4",
     "react-router": "4",
     "react-select": "^1.0.0-rc.5",
     "react-table": "^6.7.6",
