--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -40,6 +40,7 @@
     "react": "16",
     "react-apollo": "^2.1.3",
     "react-bootstrap": "0.31.3",
+    "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "16",
     "react-ga": "^2.2.0",
