--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^8.3.0",
     "juice": "^2.0.0",
     "moment": "^2.14.1",
+    "mongo-mock": "https://github.com/williamkapke/mongo-mock",
     "mongodb": "^2.2.34",
     "mongoose": "^5.1.6",
     "morgan": "^1.6.1",
@@ -81,11 +82,13 @@
     "eslint": "^4.18.1",
     "ioredis-mock": "^3.8.1",
     "jest": "^22.4.3",
-    "mongodb-memory-server": "^1.7.0",
+    "mockingoose": "^2.10.1",
+    "mongo-mock": "^3.1.0",
     "supertest": "^3.0.0"
   },
   "jest": {
     "testEnvironment": "node",
+    "globalSetup": "./jestSetup.js",
     "collectCoverageFrom": [
       "**/*.js",
       "!**/*.spec.js",
