add config flag for datalad github exports to example config.env file

--- a/config.env.example
+++ b/config.env.example
@@ -52,3 +52,5 @@ ENVIRONMENT=
 
 ANALYSIS_ENABLED=true
 
+# Datalad ----------------------------------------------------------------------
+DATALAD_GITHUB_EXPORTS_ENABLED=true
