--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ citeproc-py==0.4.0
 coverage==4.5.1
 cryptography==2.2.2
 datalad==0.10.1
+dnspython==1.15.0
 docutils==0.14
 duecredit==0.6.3
 entrypoints==0.2.3
