Update config.env.example with all required values

--- a/config.env.example
+++ b/config.env.example
@@ -18,7 +18,6 @@ ORCID_API_ENDPOINT=
 GLOBUS_CLIENT_ID=
 GLOBUS_CLIENT_SECRET=
 
-
 # Relay for enabling mail - leave blank to disable email
 CRN_SERVER_MAIL_SERVICE=
 CRN_SERVER_MAIL_USER=
@@ -29,11 +28,12 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_ACCOUNT_ID=
-AWS_S3_DATASET_BUCKET=
-AWS_S3_ANALYSIS_BUCKET=
-AWS_S3_INPUTS_BUCKET=
 AWS_BATCH_QUEUE=
 AWS_BATCH_COMPUTE_ENVIRONMENT=
+
+# Dataset unpublished/published buckets - used by DataLad service
+AWS_S3_PRIVATE_BUCKET=
+AWS_S3_PUBLIC_BUCKET=
 
 # Enable Google analytics
 GOOGLE_TRACKING_ID=
@@ -53,4 +53,11 @@ ENVIRONMENT=
 ANALYSIS_ENABLED=true
 
 # Datalad ----------------------------------------------------------------------
-DATALAD_GITHUB_EXPORTS_ENABLED=true
+
+DATALAD_WORKERS=4
+
+# GitHub user must have admin on the organization
+DATALAD_GITHUB_EXPORTS_ENABLED=false
+DATALAD_GITHUB_ORG=
+DATALAD_GITHUB_LOGIN=
+DATALAD_GITHUB_PASS=
