Use a container as the source of content instead of untracked directory.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 
 CRN_APP_TAG=latest
 CRN_SERVER_TAG=latest
-BIDS_CORE_TAG=latest
+CONTENT_IMAGE=openneuro/content:latest
 DATALAD_SERVICE_TAG=latest
 PERSISTENT_DIR=/data
