--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,6 +43,10 @@ server {
 	    proxy_set_header Host $host;
     }
 
+    location /content {
+        root /content;
+    }
+
     # crn-web app
     root /srv/app/dist;
     location /index.html {
