--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -24,6 +24,10 @@ server {
 	    proxy_set_header Host $host;
     }
 
+    location /content {
+        alias /content;
+    }
+
     # crn-web app
     root /srv/app/dist;
     location / {
