--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -106,7 +106,8 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
         "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "openneuro-content": "<rootDir>/__mocks__/contentMock.js"
     },
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
