Port server to Apollo 2.0
Enables engine monitoring as well.

--- a/config.env.example
+++ b/config.env.example
@@ -51,6 +51,9 @@ ENVIRONMENT=
 # Enable fresh desk support
 FRESH_DESK_URL=
 
+# Enable Apollo engine monitoring
+ENGINE_API_KEY=
+
 # client -----------------------------------------------------------------------
 
 ANALYSIS_ENABLED=true
