--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
-    "apollo-server-express": "^1.3.2",
+    "apollo-server-express": "^2.0.0",
     "apollo-upload-server": "^5.0.0",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
@@ -62,7 +62,8 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download":
+      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
@@ -73,6 +74,7 @@
     "yazl": "^2.4.3"
   },
   "devDependencies": {
+    "apollo": "^1.5.0",
     "apollo-link-schema": "^1.0.6",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
