nginx cache-busting on openneuro-content.js

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,6 +43,10 @@ server {
 	    proxy_set_header Host $host;
     }
 
+    # location /content/openneuro-content.js {
+    #     add_header Cache-Control 'max-age=0; public';
+    # }
+
     location /content {
         root /content;
     }
