--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -24,12 +24,18 @@ server {
 	    proxy_set_header Host $host;
     }
 
+    location = /content/openneuro-content.js {
+        add_header Cache-Control 'max-age=0; public';
+        alias /content/openneuro-content.js;
+    }
+
     location /content {
         alias /content;
     }
 
     # crn-web app
     root /srv/app/dist;
+
     location / {
         proxy_pass http://app:9876;
         proxy_http_version 1.1;
