--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -26,6 +26,7 @@
     "downloadjs": "^1.4.7",
     "draft-js": "^0.10.5",
     "draft-js-prism": "^1.0.6",
+    "enzyme-to-json": "^3.3.4",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "jszip": "^3.1.5",
     "load-google-api": "^0.1.3",
@@ -80,7 +81,6 @@
     "css-loader": "^0.28.7",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "enzyme-to-json": "3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
