nginx.conf /content rules matche nginx.dev.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,4 @@
 server {
-    listen 80;
-    server_name www.openneuro.org;
-    return 301 https://openneuro.org$request_uri;
-}
-
-server {
     listen 80 default_server;
     listen [::]:80 default_server;
     server_name _;
@@ -43,12 +37,13 @@ server {
 	    proxy_set_header Host $host;
     }
 
-    # location /content/openneuro-content.js {
-    #     add_header Cache-Control 'max-age=0; public';
-    # }
+    location = /content/openneuro-content.js {
+        add_header Cache-Control 'max-age=0; public';
+        alias /content/openneuro-content.js;
+    }
 
     location /content {
-        root /content;
+        alias /content;
     }
 
     # crn-web app
