--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream nodejs {
+    server server:8111 fail_timeout=30s max_fails=0;
+}
+
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -26,11 +30,11 @@ server {
         proxy_set_header Connection "";
         proxy_http_version 1.1;
         proxy_request_buffering off;
-        proxy_pass http://server:8111;
+        proxy_pass http://nodejs;
     }
 
     location /graphql-subscriptions {
-        proxy_pass http://server:8111/graphql-subscriptions;
+        proxy_pass http://nodejs/graphql-subscriptions;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
