--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -68,7 +68,6 @@
     "babel": "6.23.0",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -78,13 +77,13 @@
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.16",
     "compression-webpack-plugin": "^1.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-fetch-mock": "^1.4.1",
     "moment-timezone": "^0.5.13",
@@ -94,11 +93,12 @@
     "react-test-renderer": "^16.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "watchify": "^3.9.0",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-merge": "^4.1.0",
+    "webpack": "^4.16.3",
+    "webpack-command": "^0.4.1",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.3",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "jest": {
