--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -27,6 +27,7 @@
     "draft-js": "^0.10.5",
     "draft-js-prism": "^1.0.6",
     "enzyme-to-json": "^3.3.4",
+    "es6-shim": "^0.35.3",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "jszip": "^3.1.5",
     "load-google-api": "^0.1.3",
@@ -101,12 +102,8 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "jest": {
-    "setupFiles": [
-      "./jestsetup.js"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "setupFiles": ["./jestsetup.js"],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
         "<rootDir>/__mocks__/fileMock.js",
