--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -9,7 +9,7 @@
     "url": "git@github.com:OpenNeuroOrg/openneuro.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --progress --color",
+    "start": "webpack-serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint --ext .jsx --ext .js src/scripts/",
     "test": "jest"
@@ -31,7 +31,7 @@
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
     "jszip": "^3.1.5",
     "load-google-api": "^0.1.3",
-    "loadable-components": "^0.4.0",
+    "loadable-components": "^2.2.2",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.10.3",
     "openneuro-client": "^2.0.2",
@@ -54,7 +54,7 @@
     "reflux": "6.4.1",
     "remarkable": "1.7.1",
     "semver": "^5.5.0",
-    "serviceworker-webpack-plugin": "^0.2.3",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "spark-md5": "^3.0.0",
     "stream-browserify": "^2.0.1",
     "subscriptions-transport-ws": "^0.9.9",
@@ -67,25 +67,27 @@
   "devDependencies": {
     "babel": "6.23.0",
     "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.16",
     "compression-webpack-plugin": "^1.0.0",
+    "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "jest-fetch-mock": "^1.4.1",
+    "koa-connect": "^2.0.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "^15.6.2",
@@ -94,11 +96,10 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "^1.0.1",
-    "watchify": "^3.9.0",
     "webpack": "^4.16.3",
     "webpack-command": "^0.4.1",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.3",
+    "webpack-merge": "^4.1.4",
+    "webpack-serve": "^2.0.2",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "jest": {
