--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -49,6 +49,7 @@
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.4",
     "react-router": "4",
+    "react-router-dom": "^4.3.1",
     "react-select": "^1.0.0-rc.5",
     "react-table": "^6.7.6",
     "reflux": "6.4.1",
@@ -65,7 +66,7 @@
     "xmldoc": "^1.1.0"
   },
   "devDependencies": {
-    "babel": "6.23.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -75,7 +76,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "cache-loader": "^1.2.2",
-    "clean-webpack-plugin": "^0.1.16",
+    "clean-webpack-plugin": "^0.1.19",
     "compression-webpack-plugin": "^1.0.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.2",
@@ -91,7 +92,6 @@
     "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "^15.6.2",
-    "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
