--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-app",
-  "version": "2.0.6",
+  "version": "2.1.0",
   "description": "React JS web frontend for the OpenNeuro platform.",
   "license": "MIT",
   "main": "app.js",
@@ -34,7 +34,7 @@
     "loadable-components": "^2.2.2",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.10.3",
-    "openneuro-client": "^2.0.2",
+    "openneuro-client": "^2.1.0",
     "pluralize": "^7.0.0",
     "prismjs": "^1.10.0",
     "prop-types": "^15.6.0",
@@ -103,11 +103,14 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "jest": {
-    "setupFiles": ["./jestsetup.js"],
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/__mocks__/fileMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
       "openneuro-content": "<rootDir>/__mocks__/contentMock.js"
     },
