--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,16 +105,16 @@ workflows:
       - build:
           filters:
             tags:
-              only: /v.*/
+              only: /^v.*/
       - app-build:
           requires:
             - build
           filters:
             tags:
-              only: /v.*/
+              only: /^v.*/
       - server-build:
           requires:
             - build
           filters:
             tags:
-              only: /v.*/
+              only: /^v.*/
