Add a well formed robots.txt file to production nginx.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,9 @@ server {
     gzip_proxied any;
     gzip_types text/html application/json text/css;
 
+    # Return a well formed robots.txt
+    location /robots.txt {return 200 "User-agent: *\nAllow: /\n";}
+
     # crn-server proxy
     location /crn {
         client_max_body_size 0;
