config var FRESH_DESK_URL added to config.env.example

--- a/config.env.example
+++ b/config.env.example
@@ -48,6 +48,9 @@ DOI_URL=
 SENTRY_DSN=
 ENVIRONMENT=
 
+# Enable fresh desk support
+FRESH_DESK_URL=
+
 # client -----------------------------------------------------------------------
 
 ANALYSIS_ENABLED=true
