--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -1,13 +1,15 @@
 {
   "name": "openneuro-cli",
-  "version": "2.1.0",
+  "version": "2.1.3",
   "description": "OpenNeuro command line uploader / editor.",
   "main": "index.js",
   "repository": "git@github.com:OpenNeuroOrg/openneuro.git",
   "engines": {
     "node": ">=8.0.0"
   },
-  "os": ["!win32"],
+  "os": [
+    "!win32"
+  ],
   "author": "Squishymedia",
   "license": "MIT",
   "bin": {
