--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-server",
-  "version": "2.1.3",
+  "version": "2.1.5",
   "description": "Core service for the OpenNeuro platform.",
   "license": "MIT",
   "main": "index.js",
@@ -62,8 +62,7 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download":
-      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
