--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "eslint": "4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.15.0-rc.13",
-    "jest": "^22.4.3",
+    "jest": "^23.5.0",
     "lerna": "^2.9.1",
     "lint-staged": "^6.0.1",
     "prettier": "^1.7.0"
   },
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "lint-staged": {
     "linters": {
-      "*.{js,jsx,json}": ["prettier --write", "git add"]
+      "*.{js,jsx,json}": [
+        "prettier --write",
+        "git add"
+      ]
     }
   },
   "husky": {
@@ -31,7 +36,9 @@
     }
   },
   "jest": {
-    "projects": ["packages/*"],
+    "projects": [
+      "packages/*"
+    ],
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/*.spec.js",
