--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -17,7 +17,8 @@
     "esm": "^3.0.16",
     "form-data": "^2.3.2",
     "graphql": "^0.13.2",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "subscriptions-transport-ws": "^0.9.14"
   },
   "jest": {
     "testEnvironment": "node"
