--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-eslint": "8.2.2",
     "codecov": "^3.0.0",
     "eslint": "4.19.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.15.0-rc.13",
     "jest": "^23.5.0",
