--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -84,6 +84,7 @@
     "css-loader": "^1.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
