--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
-    "apollo-server-express": "^2.0.0",
+    "apollo-server-express": "^2.0.6",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "babel-core": "^6.26.0",
@@ -61,8 +61,7 @@
     "react-dom": "^16.2.0",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download":
-      "https://github.com/OpenNeuroOrg/s3-stream-download.git",
+    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
     "tar-fs": "^1.9.0",
