--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,23 @@ upstream nodejs {
 }
 
 server {
+    listen 80;
+    listen [::]:80;
+    server_name pet.openneuro.org;
+    return 302 https://openneuro.org/pet;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name pet.openneuro.org;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate /etc/nginx/ssl/live/openneuro.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/openneuro.org/privkey.pem;
+    return 302 https://openneuro.org/pet;
+}
+
+server {
     listen 80 default_server;
     listen [::]:80 default_server;
     server_name _;
@@ -10,8 +27,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_certificate /etc/nginx/ssl/live/openneuro.org/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/openneuro.org/privkey.pem;
