--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "allowJs": true,
     "outDir": "./built",
     "target": "es6",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "moduleResolution": "node"
   },
   "include": ["./packages/**/*"]
 }
