--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -22,6 +22,7 @@
     "find-config": "^1.0.0",
     "inquirer": "^5.2.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.22.2",
     "openneuro-client": "^2.2.0"
   },
   "scripts": {
