--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,5 @@
-upstream nodejs {
-    server server:8111 fail_timeout=10s max_fails=0;
-}
+# Override docker-compose 600s TTL
+resolver 127.0.0.11 valid=10s;
 
 server {
     listen 80;
@@ -33,6 +32,10 @@ server {
     ssl_certificate /etc/nginx/ssl/live/openneuro.org/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/openneuro.org/privkey.pem;
 
+    # Use a variable to allow for IP changes when a new container starts
+    # https://www.nginx.com/blog/dns-service-discovery-nginx-plus/#domain-name-proxy_pass
+    set $openneuro_server server;
+
     add_header Strict-Transport-Security "max-age=31536000" always;
 
     gzip on;
@@ -50,11 +53,11 @@ server {
         proxy_set_header Connection "";
         proxy_http_version 1.1;
         proxy_request_buffering off;
-        proxy_pass http://nodejs;
+        proxy_pass http://$openneuro_server:8111;
     }
 
     location /graphql-subscriptions {
-        proxy_pass http://nodejs/graphql-subscriptions;
+        proxy_pass http://$openneuro_server:8111/graphql-subscriptions;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
