--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "openneuro": "node packages/openneuro-cli/src"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.8.8",
     "babel-eslint": "8.2.2",
     "codecov": "^3.0.0",
     "eslint": "4.19.1",
