Use no-cache over max-age=0 to give better reverse proxy behavior.
max-age=0 allows a proxy to hold onto the stale index.html instead of
correctly returning some kind of page load error if it can't be reached.

max-age=0 should be fine for openneuro-content

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,7 +76,7 @@ server {
     # crn-web app
     root /srv/app/dist;
     location /index.html {
-        add_header Cache-Control 'max-age=0; public';
+        add_header Cache-Control 'no-cache; public';
     }
 
     location / {
