Re-add missing Google site verification to nginx.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,6 +45,9 @@ server {
     # Return a well formed robots.txt
     location /robots.txt {return 200 "User-agent: *\nAllow: /\n";}
 
+    # Google verification
+    location /google91f984197a997590.html {return 200 "google-site-verification: google91f984197a997590.html";}
+
     # crn-server proxy
     location /crn {
         client_max_body_size 0;
