Server: Sync up babel versions with openneuro-app

--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -20,8 +20,6 @@
     "apollo-server-express": "^2.0.6",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "base64url": "^2.0.0",
     "bcrypt": "^2.0.1",
     "bids-validator": "1.0.3",
@@ -72,15 +70,19 @@
     "yazl": "^2.4.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
     "apollo": "^1.5.0",
     "apollo-link-schema": "^1.0.6",
     "babel-eslint": "^8.0.0",
-    "babel-jest": "^21.0.2",
-    "babel-preset-env": "^1.6.0",
     "codecov": "^2.3.0",
     "eslint": "^4.18.1",
     "ioredis-mock": "^3.8.1",
-    "jest": "^22.4.3",
+    "jest": "^23.6.0",
     "mockingoose": "^2.10.1",
     "mongo-mock": "https://github.com/williamkapke/mongo-mock",
     "supertest": "^3.0.0"
