--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -82,7 +82,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.1.2",
-    "babel-core": "^7.0.0-bridge",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "cache-loader": "^1.2.2",
