--- a/packages/openneuro-server/.babelrc
+++ b/packages/openneuro-server/.babelrc
@@ -1,10 +1,11 @@
 {
   "plugins": [
-    "transform-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining"
   ],
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "node": "current"
