--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,6 +59,17 @@ server {
         proxy_pass http://$openneuro_server:8111;
     }
 
+    # Sitemap path
+    location /sitemap.xml {
+        client_max_body_size 0;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_pass http://$openneuro_server:8111/crn/sitemap;
+    }
+
     location /graphql-subscriptions {
         proxy_pass http://$openneuro_server:8111/graphql-subscriptions;
         proxy_http_version 1.1;
