--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -17,7 +17,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "@types/jasmine": "^2.8.9",
-    "apollo-link-ws": "^1.0.8",
+    "apollo-link-ws": "^1.0.9",
     "async": "^2.6.0",
     "babel-eslint": "^10.0.1",
     "babel-runtime": "^6.26.0",
@@ -48,7 +48,7 @@
     "prop-types": "^15.6.0",
     "raven-js": "^3.20.1",
     "react": "16",
-    "react-apollo": "^2.1.3",
+    "react-apollo": "^2.2.4",
     "react-bootstrap": "0.31.3",
     "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
@@ -60,6 +60,7 @@
     "react-router-dom": "^4.3.1",
     "react-select": "^1.0.0-rc.5",
     "react-table": "^6.7.6",
+    "react-toastify": "^4.4.0",
     "reflux": "6.4.1",
     "remarkable": "1.7.1",
     "semver": "^5.5.0",
