Add maintenance page to web container.

--- a/packages/openneuro-app/Dockerfile
+++ b/packages/openneuro-app/Dockerfile
@@ -12,10 +12,9 @@ RUN yarn install --pure-lockfile && yarn bootstrap && apk del make gcc g++ pytho
 
 WORKDIR /srv/packages/openneuro-app
 
-RUN yarn build
+RUN yarn build && cp maintenance.html dist/
 
 
 FROM nginx:alpine AS web
-
 COPY --from=app /srv/packages/openneuro-app/dist /srv/app/dist
 
