--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "lerna": "2.9.1",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "2.5.0"
+  "version": "2.5.2"
 }
