--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -49,6 +49,7 @@
     "node-fetch": "^2.0.0",
     "node-resque": "^4.0.7",
     "nodemailer": "^2.5.0",
+    "object-hash": "^1.3.1",
     "passport": "^0.4.0",
     "passport-globus": "^0.0.1",
     "passport-google-oauth": "^1.0.0",
