--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -17,6 +17,7 @@
   "author": "Squishymedia",
   "dependencies": {
     "@types/jasmine": "^2.8.9",
+    "apollo-client": "^2.4.7",
     "apollo-link-ws": "^1.0.9",
     "async": "^2.6.0",
     "babel-eslint": "^10.0.1",
@@ -32,6 +33,7 @@
     "es6-shim": "^0.35.3",
     "eslint": "^5.7.0",
     "favico.js": "git://github.com/ejci/favico.js#0.3.10",
+    "graphql": "^0.13.0",
     "husky": "^1.1.2",
     "jszip": "^3.1.5",
     "jwt-decode": "^2.2.0",
@@ -47,7 +49,7 @@
     "prop-types": "^15.6.0",
     "raven-js": "^3.20.1",
     "react": "16",
-    "react-apollo": "^2.2.4",
+    "react-apollo": "^2.3.2",
     "react-bootstrap": "0.31.3",
     "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
@@ -77,6 +79,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
