--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -28,6 +28,7 @@
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
     "codecov": "^3.0.0",
+    "date-fns": "^1.29.0",
     "downloadjs": "^1.4.7",
     "draft-js": "^0.10.5",
     "draft-js-prism": "^1.0.6",
@@ -43,7 +44,6 @@
     "lint-staged": "^7.3.0",
     "loadable-components": "^2.2.2",
     "lodash.clonedeep": "^4.5.0",
-    "moment": "^2.10.3",
     "openneuro-client": "^2.4.2",
     "pluralize": "^7.0.0",
     "prettier": "^1.14.3",
@@ -105,7 +105,6 @@
     "jest": "^23.5.0",
     "jest-fetch-mock": "^1.4.1",
     "mini-css-extract-plugin": "^0.4.1",
-    "moment-timezone": "^0.5.13",
     "node-sass": "^4.5.3",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.0.0",
