--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
   "lerna": "2.9.1",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "2.5.3"
+  "version": "2.6.0"
 }
