Workaround Sentry repo detection bug.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,9 @@ jobs:
           name: Install sentry-cli
           command: yarn install
       - run:
+          name: Update remote for Sentry bug
+          command: git remote set-url origin https://github.com/openneuroorg/openneuro.git
+      - run:
           name: Create sentry release
           command: yarn sentry-cli releases new -p openneuro $(jq -r .version lerna.json)
       - run:
