--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
-    "apollo-server-express": "^2.0.6",
+    "apollo-server-express": "2.3.1",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "base64url": "^2.0.0",
