--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
+    "@sentry/browser": "^4.5.3",
     "@types/jasmine": "^2.8.9",
     "apollo-client": "^2.4.7",
     "apollo-link-ws": "^1.0.9",
@@ -49,7 +50,6 @@
     "prettier": "^1.14.3",
     "prismjs": "^1.10.0",
     "prop-types": "^15.6.0",
-    "raven-js": "^3.20.1",
     "react": "16",
     "react-apollo": "^2.3.2",
     "react-bootstrap": "0.31.3",
