Update configuration example to remove unused private Sentry key.

--- a/config.env.example
+++ b/config.env.example
@@ -44,8 +44,7 @@ DOI_PASSWORD=
 DOI_PREFIX=
 DOI_URL=
 
-# Enable sentry debugging and choose a unique environment key
-SENTRY_DSN=
+# Choose a unique environment key - used to group error reports in Sentry
 ENVIRONMENT=
 
 # Enable fresh desk support
