--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Squishymedia",
   "dependencies": {
+    "@passport-next/passport-google-oauth2": "^1.0.0",
     "@sentry/node": "^4.5.3",
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
@@ -53,7 +54,7 @@
     "object-hash": "^1.3.1",
     "passport": "^0.4.0",
     "passport-globus": "^0.0.1",
-    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-orcid": "^0.0.3",
     "react": "^16.2.0",
