--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -12,7 +12,7 @@
     "apollo-link": "^1.2.4",
     "apollo-link-context": "^1.0.10",
     "apollo-link-ws": "^1.0.10",
-    "apollo-upload-client": "https://github.com/nellh/apollo-upload-client-build.git#d7d4cd0d630bd5a8eee4bb2257d1cb267c797185",
+    "apollo-upload-client": "^10.0.0",
     "cross-fetch": "^2.2.2",
     "esm": "^3.0.84",
     "form-data": "^2.3.3",
