--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -27,6 +27,7 @@
     "bids-validator": "1.1.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "core-js": "3.0.0-beta.11",
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
