--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -19,7 +19,8 @@
     "@sentry/node": "^4.5.3",
     "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
-    "apollo-server-express": "2.3.1",
+    "apollo-server": "2.4.0",
+    "apollo-server-express": "2.4.0",
     "async": "^2.4.1",
     "aws-sdk": "2.50.0",
     "base64url": "^2.0.0",
@@ -27,16 +28,16 @@
     "bids-validator": "1.1.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "core-js": "3.0.0-beta.11",
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "express": "^4.13.3",
     "express-fileupload": "^0.1.4",
-    "graphql": "^0.13.2",
+    "graphql": "14",
     "graphql-bigint": "^1.0.0",
     "graphql-iso-date": "^3.5.0",
-    "graphql-redis-subscriptions": "^1.5.0",
+    "graphql-redis-subscriptions": "2.0.0",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "immutable": "^3.8.2",
