--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -59,8 +59,8 @@
     "react-ga": "^2.2.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.4",
-    "react-router": "4",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^4.4.0-beta.7",
+    "react-router-dom": "^4.4.0-beta.7",
     "react-select": "^1.0.0-rc.5",
     "react-table": "^6.7.6",
     "react-toastify": "^4.4.0",
