--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -17,12 +17,10 @@
   "dependencies": {
     "@passport-next/passport-google-oauth2": "^1.0.0",
     "@sentry/node": "^4.5.3",
-    "ajv": "4.9.0",
     "apollo-client-preset": "^1.0.8",
     "apollo-server": "2.4.0",
     "apollo-server-express": "2.4.0",
     "async": "^2.4.1",
-    "aws-sdk": "2.50.0",
     "base64url": "^2.0.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
@@ -31,7 +29,6 @@
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "express": "^4.13.3",
-    "express-fileupload": "^0.1.4",
     "graphql": "14",
     "graphql-bigint": "^1.0.0",
     "graphql-iso-date": "^3.5.0",
@@ -50,7 +47,6 @@
     "mongoose": "https://github.com/Automattic/mongoose.git#89bcfcf24e5dc78c4542d2319bf63923e970a542",
     "morgan": "^1.6.1",
     "node-fetch": "^2.0.0",
-    "node-resque": "^4.0.7",
     "nodemailer": "^2.5.0",
     "object-hash": "^1.3.1",
     "passport": "^0.4.0",
@@ -62,16 +58,12 @@
     "react-dom": "^16.8.6",
     "redis": "^2.8.0",
     "request": "^2.83.0",
-    "s3-stream-download": "https://github.com/OpenNeuroOrg/s3-stream-download.git",
     "sitemap": "^2.1.0",
     "subscriptions-transport-ws": "^0.9.9",
     "superagent": "^3.8.2",
-    "tar-fs": "^1.9.0",
     "underscore": "^1.8.3",
     "uuid": "^3.0.1",
-    "victory": "^0.23.1",
-    "xmldoc": "^1.1.0",
-    "yazl": "^2.4.3"
+    "xmldoc": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
