--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
   "lerna": "2.9.1",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "3.1.1"
+  "version": "3.1.2"
 }
