--- a/helm/openneuro/Chart.yaml
+++ b/helm/openneuro/Chart.yaml
@@ -5,8 +5,11 @@ description: OpenNeuro production deployment chart
 home: https://openneuro.org
 sources:
   - https://github.com/openNeuroOrg/openneuro
+appVersion: 3.1.2
 dependencies:
   - name: redis
     version: 7.1.0
     repository: https://kubernetes-charts.storage.googleapis.com/
-appVersion: 3.1.2
+  - name: efs-provisioner
+    version: 0.3.7
+    repository: https://kubernetes-charts.storage.googleapis.com/
